Changed the width and added a max-height css property to the <NewsDetails/> component, only for screens with a min-width of 991.98 px. Now we can prevent images from being to tall and taking too much space from the screen.

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -89,7 +89,8 @@
   }
 
   .selected-news-img {
-    width: 32rem !important;
+    width: 510px !important;
+    max-height: 400px;
   }
 
   .news-img {
